updated models added block model new database script
